--- a/WebContent/WEB-INF/css/mystyle.css
+++ b/WebContent/WEB-INF/css/mystyle.css
@@ -1,15 +1,87 @@
 @CHARSET "UTF-8";
 
-.header {
-
-	padding: 10px;
-
-	width: 100%;
-
-	text-align: center;
-
+html {
+	color: #2E2E2E;
+	font-family: Arial, Helvetica, sans-serif;
 	background-color: #F2F2F2;
+	max-width: 980px;
+}
 
+body {
+	margin: 0px;
+	padding: 0px;
+	height: 100%;
+}
+
+.header {
+	padding: 10px;
+	width: 100%;
+	text-align: left;
+	background-color: #F2F2F2;
 	color: #424242;
+}
 
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+li {
+	display: inline;
+}
+
+.body {
+	margin: 10px;
+}
+
+h1 {
+	text-align: center;
+}
+
+h2 {
+	text-align: center;
+}
+
+h3 {
+	text-align: center;
+}
+
+p {
+	text-align: justify;
+}
+
+table {
+	width: 80%;
+	margin-top: 20px;
+}
+
+td, td.center-col {
+	height: 40px;
+}
+
+td.center-col {
+	text-align: center;
+}
+
+td.right-col {
+	text-align: right;
+	padding-right: 15px;
+}
+
+th {
+	color: #424242;
+	border: 1pt solid #808080;
+}
+
+.footer {
+	clear: both;
+	position: inherit;
+	bottom: 0;
+	left: 0;
+	text-align: center;
+	width: 100%;
+	height: 20px;
+	background-color: #808080;
+	color:#fff;
 }
