--- a/WebContent/css/mystyle.css
+++ b/WebContent/css/mystyle.css
@@ -30,7 +30,10 @@ ul {
 li {
 	display: inline;
 }
-
+.a {
+	text-align: center;
+	
+}
 .body {
 	margin: 10px;
 }
@@ -43,12 +46,16 @@ h2 {
 	text-align: center;
 }
 
+
 h3 {
 	text-align: center;
 }
 
 p {
 	text-align: justify;
+}
+.p {
+	text-align: center;
 }
 
 table {
@@ -86,4 +93,9 @@ th {
 	height: 20px;
 	background-color: #808080;
 	color:#fff;
+}
+.img {
+    display: block;
+    margin: 0 auto;
+}
 }
